// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Header EC renders correctly 1`] = `
<jest>
  <header
    class="bcl-header bcl-header--ec"
  >
    <nav
      aria-label="Top Navigation"
      class="w-100 shadow-sm bcl-header__top-navbar navbar navbar-expand-lg navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href="/example.html"
        >
          <img
            alt="european commission logo"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/ec/images/logo/logo-ec--en.svg"
          />
        </a>
        <button
          aria-controls="header-navbar"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#header-navbar"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
      </div>
    </nav>
    <!-- project name -->
    <div
      class="bcl-header__project"
    >
      <div
        class="container"
      >
        <a
          href="/example.html"
        >
          <img
            alt="project logo"
            class="d-none d-lg-inline-block"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/placeholder.svg"
          />
          <span
            class="bcl-header__site-name"
          >
            Project name
          </span>
        </a>
      </div>
    </div>
    <!-- navbar -->
    <nav
      aria-label="Main Navigation"
      class="bcl-header__navbar collapse navbar-collapse navbar navbar-expand-lg navbar-dark"
      id="header-navbar"
    >
      <div
        class="container"
      >
        <ul
          class="me-auto navbar-nav"
        >
          <li
            class="nav-item"
          >
            <div
              aria-labelledby="dropdown-megamenu"
              class="bcl-mega-menu"
              style="--bcl-mm-min-height: 300px;"
            >
              <button
                aria-expanded="false"
                autocomplete="off"
                class="dropdown-toggle nav-link btn btn-link btn-md"
                data-bs-auto-close="outside"
                data-bs-toggle="dropdown"
                id="dropdown-megamenu"
                type="button"
              >
                A link with dropdown
              </button>
              <div
                aria-labelledby="dropdown-megamenu"
                class="mega-menu-container dropdown-menu"
              >
                <div
                  class="container position-relative"
                >
                  <div
                    class="d-lg-none back-button-block"
                  >
                    <button
                      class="back-button btn btn-link btn-md"
                      type="button"
                    >
                      <svg
                        class="me-2-5 bi icon--fluid"
                      >
                        <use
                          xlink:href="/icons.svg#arrow-left"
                        />
                      </svg>
                      Back
                    </button>
                  </div>
                  <div
                    class="row pb-lg-3"
                  >
                    <div
                      class="col-md-12 col-xl-3"
                    >
                      <div
                        class="content-block"
                      >
                        <h4>
                          About the European Commission
                        </h4>
                        <p>
                          Description text, lorem ipsum dolor sit amet, consectetur adipiscing elit.
                        </p>
                        <p
                          class="m-0"
                        >
                          <a
                            class="content-link"
                            href="/example.html"
                          >
                            Discover more
                            <svg
                              class="ms-2-5 bi icon--s"
                            >
                              <use
                                xlink:href="/icons.svg#arrow-right"
                              />
                            </svg>
                          </a>
                        </p>
                      </div>
                    </div>
                    <div
                      class="col-md-12 col-xl-9 mb-lg-3"
                    >
                      <div
                        class="navigation-items"
                      >
                        <div
                          class="dropdown dropend"
                        >
                          <a
                            aria-expanded="false"
                            class="dropdown-toggle"
                            data-bs-auto-close="outside"
                            data-bs-toggle="dropdown"
                            href="#"
                            id="dropdown-megamenu-inner"
                            role="button"
                          >
                            Base Category Item
                            <svg
                              class="ms-2-5 bi icon--fluid"
                            >
                              <use
                                xlink:href="/icons.svg#chevron-right"
                              />
                            </svg>
                          </a>
                          <ul
                            aria-labelledby="dropdown-megamenu-inner"
                            class="dropdown-menu"
                          >
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="see-all-button dropdown-item"
                                href="/example.html"
                              >
                                See all
                                <svg
                                  class="ms-2-5 bi icon--s"
                                >
                                  <use
                                    xlink:href="/icons.svg#arrow-right"
                                  />
                                </svg>
                              </a>
                            </li>
                          </ul>
                        </div>
                        <a
                          href="#"
                        >
                          Base Category Item
                        </a>
                        <div
                          class="dropdown dropend"
                        >
                          <a
                            aria-expanded="false"
                            class="dropdown-toggle"
                            data-bs-auto-close="outside"
                            data-bs-toggle="dropdown"
                            href="/example.html"
                            id="dropdown-megamenu-inner-2"
                            role="button"
                          >
                            Base Category Item
                            <svg
                              class="ms-2-5 bi icon--fluid"
                            >
                              <use
                                xlink:href="/icons.svg#chevron-right"
                              />
                            </svg>
                          </a>
                          <ul
                            aria-labelledby="dropdown-megamenu-inner-2"
                            class="dropdown-menu"
                          >
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                          </ul>
                        </div>
                        <a
                          href="/example.html"
                        >
                          Base Category Item
                        </a>
                        <a
                          href="/example.html"
                        >
                          Base Category Item
                        </a>
                        <a
                          href="/example.html"
                        >
                          Base Category Item
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <a
              aria-current="page"
              class="nav-link active"
              href="/example.html"
            >
              Home
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/example.html"
            >
              Item 01
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/example.html"
            >
              Item 02
            </a>
          </li>
          <li
            class="nav-item dropdown"
          >
            <button
              aria-expanded="false"
              autocomplete="off"
              class="dropdown-toggle btn btn-primary btn-md"
              data-bs-toggle="dropdown"
              id="navbarDropdownMenuLink"
              type="button"
            >
              Dropdown link
            </button>
            <ul
              aria-labelledby="navbarDropdownMenuLink"
              class="dropdown-menu"
            >
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Action
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Another action
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Something else here
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Very long label with custom text and custom link as an example
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </nav>
    <!-- breadcrumbs -->
    <div
      class="container"
    >
      <nav
        aria-label="breadcrumb"
        class="mt-3"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              href="/example.html"
            >
              Home
            </a>
          </li>
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              href="/example.html"
            >
              European Union
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              href="/example.html"
            >
              <svg
                class="d-md-none ms-0 me-2 me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#arrow-left"
                />
              </svg>
              About the European Union
            </a>
          </li>
          <li
            aria-current="page"
            class="breadcrumb-item d-none d-md-block active"
          >
            News
          </li>
        </ol>
      </nav>
    </div>
  </header>
  <div
    aria-hidden="true"
    aria-label="loginModalLabel"
    class="modal fade"
    id="loginModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="loginModalLabel"
          >
            Log in
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <h5>
            Disclaimer 1
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
            <br />
              Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
            <br />
          </p>
          <h5>
            Disclaimer 2
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
            <br />
              Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
            <br />
          </p>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
          <button
            class="btn btn-primary"
            type="button"
          >
            Access EU login
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-label="languageModalLabel"
    class="bcl-language-list-modal bcl-language-list-modal--ec modal fade"
    id="languageModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-fullscreen"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="container"
          >
            <div
              class="border-bottom mx-n3 px-3 px-md-0 pt-md-4-5"
            >
              <div
                class="py-3-5 px-3 px-sm-0 px-md-3"
              >
                <div
                  class="d-flex justify-content-between align-items-center"
                >
                  <div
                    class="d-flex align-items-center"
                  >
                    <svg
                      class="bi icon--s"
                    >
                      <use
                        xlink:href="/icons.svg#globe2"
                      />
                    </svg>
                    <div
                      class="modal-title mb-0 ms-2"
                    >
                      Select your language
                    </div>
                  </div>
                  <button
                    aria-label="Close"
                    class="btn-close"
                    data-bs-dismiss="modal"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="modal-body"
        >
          <div
            class="bcl-language-list bcl-language-list--ec"
          >
            <div
              class="main pt-4"
            >
              <div
                class="container"
              >
                <div
                  class="pb-2"
                >
                  <h5
                    class="mb-4"
                  >
                    EU official languages
                  </h5>
                  <div
                    class="row"
                  >
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#bg"
                        hreflang="bg"
                        lang="bg"
                      >
                        български
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#es"
                        hreflang="es"
                        lang="es"
                      >
                        español
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#cs"
                        hreflang="cs"
                        lang="cs"
                      >
                        čeština
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#da"
                        hreflang="da"
                        lang="da"
                      >
                        dansk
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#de"
                        hreflang="de"
                        lang="de"
                      >
                        Deutsch
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#et"
                        hreflang="et"
                        lang="et"
                      >
                        eesti
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#el"
                        hreflang="el"
                        lang="el"
                      >
                        ελληνικά
                      </a>
                      <a
                        class="w-100 mb-2-5 btn selected justify-content-between"
                        href="/example.html#en"
                        hreflang="en"
                        lang="en"
                      >
                        English
                        <svg
                          class="ms-2-5 bi icon--s"
                        >
                          <use
                            xlink:href="/icons.svg#check2"
                          />
                        </svg>
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#fr"
                        hreflang="fr"
                        lang="fr"
                      >
                        français
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#ga"
                        hreflang="ga"
                        lang="ga"
                      >
                        Gaeilge
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#hr"
                        hreflang="hr"
                        lang="hr"
                      >
                        hrvatski
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#it"
                        hreflang="it"
                        lang="it"
                      >
                        italiano
                      </a>
                    </div>
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#lv"
                        hreflang="lv"
                        lang="lv"
                      >
                        latviešu
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#lt"
                        hreflang="lt"
                        lang="lt"
                      >
                        lietuvių
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#hu"
                        hreflang="hu"
                        lang="hu"
                      >
                        magyar
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#mt"
                        hreflang="mt"
                        lang="mt"
                      >
                        Malti
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#nl"
                        hreflang="nl"
                        lang="nl"
                      >
                        Nederlands
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#pl"
                        hreflang="pl"
                        lang="pl"
                      >
                        polski
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#pt"
                        hreflang="pt"
                        lang="pt"
                      >
                        português
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#ro"
                        hreflang="ro"
                        lang="ro"
                      >
                        română
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#sk"
                        hreflang="sk"
                        lang="sk"
                      >
                        slovenčina
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#sl"
                        hreflang="sl"
                        lang="sl"
                      >
                        slovenščina
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#fi"
                        hreflang="fi"
                        lang="fi"
                      >
                        suomi
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#sv"
                        hreflang="sv"
                        lang="sv"
                      >
                        svenska
                      </a>
                    </div>
                  </div>
                </div>
                <div
                  class="pb-2"
                >
                  <h5
                    class="mb-4"
                  >
                    Other languages
                  </h5>
                  <div
                    class="row"
                  >
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#zh"
                        hreflang="zh"
                        lang="zh"
                      >
                        中文
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#tr"
                        hreflang="tr"
                        lang="tr"
                      >
                        Türk
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#ru"
                        hreflang="ru"
                        lang="ru"
                      >
                        pусский
                      </a>
                    </div>
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#ca"
                        hreflang="ca"
                        lang="ca"
                      >
                        Català
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="ar"
                        lang="ar"
                      >
                        عَرَبِيّ
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Header EU renders correctly 1`] = `
<jest>
  <header
    class="bcl-header bcl-header--eu"
  >
    <nav
      aria-label="Top Navigation"
      class="w-100 shadow-sm bcl-header__top-navbar navbar navbar-expand-lg navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href="/example.html"
        >
          <img
            alt="desktop project logo"
            class="d-none d-lg-block"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/standard-version/positive/logo-eu--en.svg"
          />
          <img
            alt="mobile project logo"
            class="d-lg-none"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/condensed-version/positive/logo-eu--en.svg"
          />
        </a>
        <button
          aria-controls="header-navbar"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#header-navbar"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
      </div>
    </nav>
    <!-- project name -->
    <div
      class="bcl-header__project"
    >
      <div
        class="container"
      >
        <img
          alt="project logo"
          class="d-none d-lg-inline-block"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/placeholder.svg"
        />
        <span
          class="bcl-header__site-name"
        >
          Project name
        </span>
      </div>
    </div>
    <!-- navbar -->
    <nav
      aria-label="Main Navigation"
      class="bcl-header__navbar collapse navbar-collapse navbar navbar-expand-lg navbar-dark"
      id="header-navbar"
    >
      <div
        class="container"
      >
        <ul
          class="me-auto navbar-nav"
        >
          <li
            class="nav-item"
          >
            <div
              aria-labelledby="dropdown-megamenu"
              class="bcl-mega-menu"
              style="--bcl-mm-min-height: 300px;"
            >
              <button
                aria-expanded="false"
                autocomplete="off"
                class="dropdown-toggle nav-link btn btn-link btn-md"
                data-bs-auto-close="outside"
                data-bs-toggle="dropdown"
                id="dropdown-megamenu"
                type="button"
              >
                A link with dropdown
              </button>
              <div
                aria-labelledby="dropdown-megamenu"
                class="mega-menu-container dropdown-menu"
              >
                <div
                  class="container position-relative"
                >
                  <div
                    class="d-lg-none back-button-block"
                  >
                    <button
                      class="back-button btn btn-link btn-md"
                      type="button"
                    >
                      <svg
                        class="me-2-5 bi icon--fluid"
                      >
                        <use
                          xlink:href="/icons.svg#arrow-left"
                        />
                      </svg>
                      Back
                    </button>
                  </div>
                  <div
                    class="row pb-lg-3"
                  >
                    <div
                      class="col-md-12 col-xl-3"
                    >
                      <div
                        class="content-block"
                      >
                        <h4>
                          About the European Commission
                        </h4>
                        <p>
                          Description text, lorem ipsum dolor sit amet, consectetur adipiscing elit.
                        </p>
                        <p
                          class="m-0"
                        >
                          <a
                            class="content-link"
                            href="/example.html"
                          >
                            Discover more
                            <svg
                              class="ms-2-5 bi icon--s"
                            >
                              <use
                                xlink:href="/icons.svg#arrow-right"
                              />
                            </svg>
                          </a>
                        </p>
                      </div>
                    </div>
                    <div
                      class="col-md-12 col-xl-9 mb-lg-3"
                    >
                      <div
                        class="navigation-items"
                      >
                        <div
                          class="dropdown dropend"
                        >
                          <a
                            aria-expanded="false"
                            class="dropdown-toggle"
                            data-bs-auto-close="outside"
                            data-bs-toggle="dropdown"
                            href="#"
                            id="dropdown-megamenu-inner"
                            role="button"
                          >
                            Base Category Item
                            <svg
                              class="ms-2-5 bi icon--fluid"
                            >
                              <use
                                xlink:href="/icons.svg#chevron-right"
                              />
                            </svg>
                          </a>
                          <ul
                            aria-labelledby="dropdown-megamenu-inner"
                            class="dropdown-menu"
                          >
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="see-all-button dropdown-item"
                                href="/example.html"
                              >
                                See all
                                <svg
                                  class="ms-2-5 bi icon--s"
                                >
                                  <use
                                    xlink:href="/icons.svg#arrow-right"
                                  />
                                </svg>
                              </a>
                            </li>
                          </ul>
                        </div>
                        <a
                          href="#"
                        >
                          Base Category Item
                        </a>
                        <div
                          class="dropdown dropend"
                        >
                          <a
                            aria-expanded="false"
                            class="dropdown-toggle"
                            data-bs-auto-close="outside"
                            data-bs-toggle="dropdown"
                            href="/example.html"
                            id="dropdown-megamenu-inner-2"
                            role="button"
                          >
                            Base Category Item
                            <svg
                              class="ms-2-5 bi icon--fluid"
                            >
                              <use
                                xlink:href="/icons.svg#chevron-right"
                              />
                            </svg>
                          </a>
                          <ul
                            aria-labelledby="dropdown-megamenu-inner-2"
                            class="dropdown-menu"
                          >
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                          </ul>
                        </div>
                        <a
                          href="/example.html"
                        >
                          Base Category Item
                        </a>
                        <a
                          href="/example.html"
                        >
                          Base Category Item
                        </a>
                        <a
                          href="/example.html"
                        >
                          Base Category Item
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <a
              aria-current="page"
              class="nav-link active"
              href="/example.html"
            >
              Home
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/example.html"
            >
              Item 01
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/example.html"
            >
              Item 02
            </a>
          </li>
          <li
            class="nav-item dropdown"
          >
            <button
              aria-expanded="false"
              autocomplete="off"
              class="dropdown-toggle btn btn-primary btn-md"
              data-bs-toggle="dropdown"
              id="navbarDropdownMenuLink"
              type="button"
            >
              Dropdown link
            </button>
            <ul
              aria-labelledby="navbarDropdownMenuLink"
              class="dropdown-menu"
            >
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Action
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Another action
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Something else here
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Very long label with custom text and custom link as an example
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </nav>
    <!-- breadcrumbs -->
    <div
      class="container"
    >
      <nav
        aria-label="breadcrumb"
        class="mt-3"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              href="/example.html"
            >
              Home
            </a>
          </li>
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              href="/example.html"
            >
              European Union
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              href="/example.html"
            >
              <svg
                class="d-md-none ms-0 me-2 me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#arrow-left"
                />
              </svg>
              About the European Union
            </a>
          </li>
          <li
            aria-current="page"
            class="breadcrumb-item d-none d-md-block active"
          >
            News
          </li>
        </ol>
      </nav>
    </div>
  </header>
  <div
    aria-hidden="true"
    aria-label="loginModalLabel"
    class="modal fade"
    id="loginModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="loginModalLabel"
          >
            Log in
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <h5>
            Disclaimer 1
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
            <br />
              Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
            <br />
          </p>
          <h5>
            Disclaimer 2
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
            <br />
              Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
            <br />
          </p>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
          <button
            class="btn btn-primary"
            type="button"
          >
            Access EU login
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-label="languageModalLabel"
    class="bcl-language-list-modal bcl-language-list-modal--eu modal fade"
    id="languageModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-fullscreen"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="container"
          >
            <div
              class="border-bottom mx-n3 px-3 px-md-0 pt-md-4-5"
            >
              <div
                class="py-3-5 px-3 px-sm-0 px-md-3"
              >
                <div
                  class="d-flex justify-content-between align-items-center"
                >
                  <div
                    class="d-flex align-items-center"
                  >
                    <svg
                      class="bi icon--s"
                    >
                      <use
                        xlink:href="/icons.svg#globe2"
                      />
                    </svg>
                    <div
                      class="modal-title mb-0 ms-2"
                    >
                      Select your language
                    </div>
                  </div>
                  <button
                    aria-label="Close"
                    class="btn-close"
                    data-bs-dismiss="modal"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="modal-body"
        >
          <div
            class="bcl-language-list bcl-language-list--eu"
          >
            <div
              class="main pt-4"
            >
              <div
                class="container"
              >
                <div
                  class="pb-2"
                >
                  <h5
                    class="mb-4"
                  >
                    EU official languages
                  </h5>
                  <div
                    class="row"
                  >
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#bg"
                        hreflang="bg"
                        lang="bg"
                      >
                        български
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#es"
                        hreflang="es"
                        lang="es"
                      >
                        español
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#cs"
                        hreflang="cs"
                        lang="cs"
                      >
                        čeština
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#da"
                        hreflang="da"
                        lang="da"
                      >
                        dansk
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#de"
                        hreflang="de"
                        lang="de"
                      >
                        Deutsch
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#et"
                        hreflang="et"
                        lang="et"
                      >
                        eesti
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#el"
                        hreflang="el"
                        lang="el"
                      >
                        ελληνικά
                      </a>
                      <a
                        class="w-100 mb-2-5 btn selected justify-content-between"
                        href="/example.html#en"
                        hreflang="en"
                        lang="en"
                      >
                        English
                        <svg
                          class="ms-2-5 bi icon--s"
                        >
                          <use
                            xlink:href="/icons.svg#check2"
                          />
                        </svg>
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#fr"
                        hreflang="fr"
                        lang="fr"
                      >
                        français
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#ga"
                        hreflang="ga"
                        lang="ga"
                      >
                        Gaeilge
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#hr"
                        hreflang="hr"
                        lang="hr"
                      >
                        hrvatski
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#it"
                        hreflang="it"
                        lang="it"
                      >
                        italiano
                      </a>
                    </div>
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#lv"
                        hreflang="lv"
                        lang="lv"
                      >
                        latviešu
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#lt"
                        hreflang="lt"
                        lang="lt"
                      >
                        lietuvių
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#hu"
                        hreflang="hu"
                        lang="hu"
                      >
                        magyar
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#mt"
                        hreflang="mt"
                        lang="mt"
                      >
                        Malti
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#nl"
                        hreflang="nl"
                        lang="nl"
                      >
                        Nederlands
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#pl"
                        hreflang="pl"
                        lang="pl"
                      >
                        polski
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#pt"
                        hreflang="pt"
                        lang="pt"
                      >
                        português
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#ro"
                        hreflang="ro"
                        lang="ro"
                      >
                        română
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#sk"
                        hreflang="sk"
                        lang="sk"
                      >
                        slovenčina
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#sl"
                        hreflang="sl"
                        lang="sl"
                      >
                        slovenščina
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#fi"
                        hreflang="fi"
                        lang="fi"
                      >
                        suomi
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#sv"
                        hreflang="sv"
                        lang="sv"
                      >
                        svenska
                      </a>
                    </div>
                  </div>
                </div>
                <div
                  class="pb-2"
                >
                  <h5
                    class="mb-4"
                  >
                    Other languages
                  </h5>
                  <div
                    class="row"
                  >
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#zh"
                        hreflang="zh"
                        lang="zh"
                      >
                        中文
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#tr"
                        hreflang="tr"
                        lang="tr"
                      >
                        Türk
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#ru"
                        hreflang="ru"
                        lang="ru"
                      >
                        pусский
                      </a>
                    </div>
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#ca"
                        hreflang="ca"
                        lang="ca"
                      >
                        Català
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="ar"
                        lang="ar"
                      >
                        عَرَبِيّ
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Header Neutral renders correctly 1`] = `
<jest>
  <header
    class="bcl-header bcl-header--neutral"
  >
    <nav
      aria-label="Top Navigation"
      class="w-100 bcl-header__top-navbar navbar navbar-expand-lg navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href="/example.html"
        >
          <img
            alt="project logo"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/placeholder.svg"
          />
        </a>
        <button
          aria-controls="header-navbar"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#header-navbar"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
      </div>
    </nav>
    <!-- project name -->
    <div
      class="bcl-header__project"
    >
      <div
        class="container"
      >
        <span
          class="bcl-header__site-name h5 d-inline-block d-lg-none"
        >
          Project name
        </span>
      </div>
    </div>
    <!-- navbar -->
    <nav
      aria-label="Main Navigation"
      class="bcl-header__navbar collapse navbar-collapse navbar navbar-expand-lg navbar-dark"
      id="header-navbar"
    >
      <div
        class="container"
      >
        <ul
          class="me-auto navbar-nav"
        >
          <li
            class="nav-item"
          >
            <div
              aria-labelledby="dropdown-megamenu"
              class="bcl-mega-menu"
              style="--bcl-mm-min-height: 300px;"
            >
              <button
                aria-expanded="false"
                autocomplete="off"
                class="dropdown-toggle nav-link btn btn-link btn-md"
                data-bs-auto-close="outside"
                data-bs-toggle="dropdown"
                id="dropdown-megamenu"
                type="button"
              >
                A link with dropdown
              </button>
              <div
                aria-labelledby="dropdown-megamenu"
                class="mega-menu-container dropdown-menu"
              >
                <div
                  class="container position-relative"
                >
                  <div
                    class="d-lg-none back-button-block"
                  >
                    <button
                      class="back-button btn btn-link btn-md"
                      type="button"
                    >
                      <svg
                        class="me-2-5 bi icon--fluid"
                      >
                        <use
                          xlink:href="/icons.svg#arrow-left"
                        />
                      </svg>
                      Back
                    </button>
                  </div>
                  <div
                    class="row pb-lg-3"
                  >
                    <div
                      class="col-md-12 col-xl-3"
                    >
                      <div
                        class="content-block"
                      >
                        <h4>
                          About the European Commission
                        </h4>
                        <p>
                          Description text, lorem ipsum dolor sit amet, consectetur adipiscing elit.
                        </p>
                        <p
                          class="m-0"
                        >
                          <a
                            class="content-link"
                            href="/example.html"
                          >
                            Discover more
                            <svg
                              class="ms-2-5 bi icon--s"
                            >
                              <use
                                xlink:href="/icons.svg#arrow-right"
                              />
                            </svg>
                          </a>
                        </p>
                      </div>
                    </div>
                    <div
                      class="col-md-12 col-xl-9 mb-lg-3"
                    >
                      <div
                        class="navigation-items"
                      >
                        <div
                          class="dropdown dropend"
                        >
                          <a
                            aria-expanded="false"
                            class="dropdown-toggle"
                            data-bs-auto-close="outside"
                            data-bs-toggle="dropdown"
                            href="#"
                            id="dropdown-megamenu-inner"
                            role="button"
                          >
                            Base Category Item
                            <svg
                              class="ms-2-5 bi icon--fluid"
                            >
                              <use
                                xlink:href="/icons.svg#chevron-right"
                              />
                            </svg>
                          </a>
                          <ul
                            aria-labelledby="dropdown-megamenu-inner"
                            class="dropdown-menu"
                          >
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="see-all-button dropdown-item"
                                href="/example.html"
                              >
                                See all
                                <svg
                                  class="ms-2-5 bi icon--s"
                                >
                                  <use
                                    xlink:href="/icons.svg#arrow-right"
                                  />
                                </svg>
                              </a>
                            </li>
                          </ul>
                        </div>
                        <a
                          href="#"
                        >
                          Base Category Item
                        </a>
                        <div
                          class="dropdown dropend"
                        >
                          <a
                            aria-expanded="false"
                            class="dropdown-toggle"
                            data-bs-auto-close="outside"
                            data-bs-toggle="dropdown"
                            href="/example.html"
                            id="dropdown-megamenu-inner-2"
                            role="button"
                          >
                            Base Category Item
                            <svg
                              class="ms-2-5 bi icon--fluid"
                            >
                              <use
                                xlink:href="/icons.svg#chevron-right"
                              />
                            </svg>
                          </a>
                          <ul
                            aria-labelledby="dropdown-megamenu-inner-2"
                            class="dropdown-menu"
                          >
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item"
                                href="/example.html"
                              >
                                Base Sub Category Item
                              </a>
                            </li>
                          </ul>
                        </div>
                        <a
                          href="/example.html"
                        >
                          Base Category Item
                        </a>
                        <a
                          href="/example.html"
                        >
                          Base Category Item
                        </a>
                        <a
                          href="/example.html"
                        >
                          Base Category Item
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="nav-item"
          >
            <a
              aria-current="page"
              class="nav-link active"
              href="/example.html"
            >
              Home
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/example.html"
            >
              Item 01
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/example.html"
            >
              Item 02
            </a>
          </li>
          <li
            class="nav-item dropdown"
          >
            <button
              aria-expanded="false"
              autocomplete="off"
              class="dropdown-toggle btn btn-primary btn-md"
              data-bs-toggle="dropdown"
              id="navbarDropdownMenuLink"
              type="button"
            >
              Dropdown link
            </button>
            <ul
              aria-labelledby="navbarDropdownMenuLink"
              class="dropdown-menu"
            >
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Action
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Another action
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Something else here
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Very long label with custom text and custom link as an example
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </nav>
    <!-- breadcrumbs -->
    <div
      class="container"
    >
      <nav
        aria-label="breadcrumb"
        class="mt-3"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              href="/example.html"
            >
              Home
            </a>
          </li>
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              href="/example.html"
            >
              European Union
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              href="/example.html"
            >
              <svg
                class="d-md-none ms-0 me-2 me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#arrow-left"
                />
              </svg>
              About the European Union
            </a>
          </li>
          <li
            aria-current="page"
            class="breadcrumb-item d-none d-md-block active"
          >
            News
          </li>
        </ol>
      </nav>
    </div>
  </header>
  <div
    aria-hidden="true"
    aria-label="loginModalLabel"
    class="modal fade"
    id="loginModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="loginModalLabel"
          >
            Log in
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <h5>
            Disclaimer 1
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
            <br />
              Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
            <br />
          </p>
          <h5>
            Disclaimer 2
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
            <br />
              Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
            <br />
          </p>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
          <button
            class="btn btn-primary"
            type="button"
          >
            Access EU login
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-label="languageModalLabel"
    class="bcl-language-list-modal bcl-language-list-modal--neutral modal fade"
    id="languageModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-xl modal-fullscreen-md-down"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="d-flex align-items-center"
          >
            <svg
              class="bi icon--s"
            >
              <use
                xlink:href="/icons.svg#globe2"
              />
            </svg>
            <div
              class="modal-title mb-0 ms-2"
            >
              Select your language
            </div>
          </div>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <div
            class="bcl-language-list bcl-language-list--neutral"
          >
            <div
              class="main pt-4"
            >
              <div
                class="pb-2"
              >
                <h5
                  class="mb-4"
                >
                  EU official languages
                </h5>
                <div
                  class="row"
                >
                  <div
                    class="col-12 col-md"
                  >
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#bg"
                      hreflang="bg"
                      lang="bg"
                    >
                      български
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#es"
                      hreflang="es"
                      lang="es"
                    >
                      español
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#cs"
                      hreflang="cs"
                      lang="cs"
                    >
                      čeština
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#da"
                      hreflang="da"
                      lang="da"
                    >
                      dansk
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#de"
                      hreflang="de"
                      lang="de"
                    >
                      Deutsch
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#et"
                      hreflang="et"
                      lang="et"
                    >
                      eesti
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#el"
                      hreflang="el"
                      lang="el"
                    >
                      ελληνικά
                    </a>
                    <a
                      class="w-100 mb-2-5 btn selected justify-content-between"
                      href="/example.html#en"
                      hreflang="en"
                      lang="en"
                    >
                      English
                      <svg
                        class="ms-2-5 bi icon--s"
                      >
                        <use
                          xlink:href="/icons.svg#check2"
                        />
                      </svg>
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#fr"
                      hreflang="fr"
                      lang="fr"
                    >
                      français
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#ga"
                      hreflang="ga"
                      lang="ga"
                    >
                      Gaeilge
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#hr"
                      hreflang="hr"
                      lang="hr"
                    >
                      hrvatski
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#it"
                      hreflang="it"
                      lang="it"
                    >
                      italiano
                    </a>
                  </div>
                  <div
                    class="col-12 col-md"
                  >
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#lv"
                      hreflang="lv"
                      lang="lv"
                    >
                      latviešu
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#lt"
                      hreflang="lt"
                      lang="lt"
                    >
                      lietuvių
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#hu"
                      hreflang="hu"
                      lang="hu"
                    >
                      magyar
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#mt"
                      hreflang="mt"
                      lang="mt"
                    >
                      Malti
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#nl"
                      hreflang="nl"
                      lang="nl"
                    >
                      Nederlands
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#pl"
                      hreflang="pl"
                      lang="pl"
                    >
                      polski
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#pt"
                      hreflang="pt"
                      lang="pt"
                    >
                      português
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#ro"
                      hreflang="ro"
                      lang="ro"
                    >
                      română
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#sk"
                      hreflang="sk"
                      lang="sk"
                    >
                      slovenčina
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#sl"
                      hreflang="sl"
                      lang="sl"
                    >
                      slovenščina
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#fi"
                      hreflang="fi"
                      lang="fi"
                    >
                      suomi
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#sv"
                      hreflang="sv"
                      lang="sv"
                    >
                      svenska
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="pb-2"
              >
                <h5
                  class="mb-4"
                >
                  Other languages
                </h5>
                <div
                  class="row"
                >
                  <div
                    class="col-12 col-md"
                  >
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#zh"
                      hreflang="zh"
                      lang="zh"
                    >
                      中文
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#tr"
                      hreflang="tr"
                      lang="tr"
                    >
                      Türk
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#ru"
                      hreflang="ru"
                      lang="ru"
                    >
                      pусский
                    </a>
                  </div>
                  <div
                    class="col-12 col-md"
                  >
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#ca"
                      hreflang="ca"
                      lang="ca"
                    >
                      Català
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="ar"
                      lang="ar"
                    >
                      عَرَبِيّ
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Header UCPKN renders correctly 1`] = `
<jest>
  <header
    class="bcl-header bcl-header--ucpkn"
  >
    <nav
      aria-label="Top Navigation"
      class="w-100 shadow-sm navbar navbar-expand-lg navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href=""
        >
          <img
            alt="desktop european union logo"
            class="d-none d-lg-block"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/standard-version/positive/logo-eu--en.svg"
          />
          <img
            alt="mobile european union logo"
            class="d-lg-none"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/condensed-version/positive/logo-eu--en.svg"
          />
        </a>
        <button
          aria-controls="header-navbar"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#header-navbar"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
      </div>
    </nav>
    <!-- project name -->
    <div
      class="bcl-header__project light"
    >
      <div
        class="container"
      >
        <img
          alt="ucpkn logo"
          class="d-none d-lg-inline-block"
          src="ucpkn_logo.svg"
        />
        <span
          class="bcl-header__site-name"
        >
          UCP Knowledge Network: Applied knowledge for action
        </span>
      </div>
    </div>
    <!-- navbar -->
    <nav
      aria-label="Main Navigation"
      class="bcl-header__navbar collapse navbar-collapse navbar navbar-expand-lg navbar-dark"
      id="header-navbar"
    >
      <div
        class="container"
      >
        <ul
          class="me-auto navbar-nav"
        >
          <li
            class="nav-item dropdown"
          >
            <a
              aria-expanded="false"
              class="nav-link dropdown-toggle"
              data-bs-toggle="dropdown"
              href="/example.html"
              id="navbarDropdownMenuLink"
              role="button"
            >
              Knowledge & Capacity
            </a>
            <ul
              aria-labelledby="navbarDropdownMenuLink"
              class="dropdown-menu"
            >
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Knowledge Network Capacity Development Pillar
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Disaster Prevention and Risk Management
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Disaster Preparedness
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Emergency Response Coordination Centre
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  UCPM Lessons Learnt Programme
                </a>
              </li>
            </ul>
          </li>
          <li
            class="nav-item dropdown"
          >
            <a
              aria-expanded="false"
              class="nav-link dropdown-toggle"
              data-bs-toggle="dropdown"
              href="/example.html"
              id="navbarDropdownMenuLinkSecond"
              role="button"
            >
              Science & Research
            </a>
            <ul
              aria-labelledby="navbarDropdownMenuLinkSecond"
              class="dropdown-menu"
            >
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Knowledge Network Science Pillar
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Disaster Risk Management Knowledge Centre
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Knowledge Gaps
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Data & Tools
                </a>
              </li>
            </ul>
          </li>
          <li
            class="nav-item dropdown"
          >
            <a
              aria-expanded="false"
              class="nav-link dropdown-toggle"
              data-bs-toggle="dropdown"
              href="/example.html"
              id="navbarDropdownMenuLinkThird"
              role="button"
            >
              Projects
            </a>
            <ul
              aria-labelledby="navbarDropdownMenuLinkThird"
              class="dropdown-menu"
            >
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Union Civil Protection Mechanism Projects
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Other Disaster Risk Management Projects
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  EU funding for disaster management
                </a>
              </li>
            </ul>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/example.html"
            >
              Stories
            </a>
          </li>
          <li
            class="nav-item dropdown"
          >
            <a
              aria-expanded="false"
              class="nav-link dropdown-toggle"
              data-bs-toggle="dropdown"
              href="#"
              id="navbarDropdownMenuLinkProjects"
              role="button"
            >
              About
            </a>
            <ul
              aria-labelledby="navbarDropdownMenuLinkProjects"
              class="dropdown-menu"
            >
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Knowledge Network Governance
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  The EU Civil Protection Mechanism
                </a>
              </li>
              <li>
                <a
                  class="dropdown-item"
                  href="/example.html"
                >
                  Information pack
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </nav>
    <!-- breadcrumbs -->
  </header>
</jest>
`;
